Load child theme textdomain

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: fxbenard
 Template: scrollider
 Version: 1.0
 Text Domain: scrollider-child
-Domain Path: languages
+Domain Path: /languages/scrollider-child
 Tags: scrollider, woothemes, french
 */
 
